Add colored dots to calendar: red for overdue, yellow for today, blue for next 7 days. Added test data script to demonstrate functionality.

--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
     <script src="js/reports.js"></script>
     <script src="js/payments.js"></script>
     <script src="js/ui.js"></script>
+    <script src="add_test_data.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
