Add feature to export all clients and loans to a single CSV file. Added 'Exportar Todos CSV' button in the loans header that generates a comprehensive CSV with all loan information.

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                     <h3 style="margin:0;color:#0f172a">Préstamos</h3>
                     <div style="display:flex;gap:8px">
                         <button class="btn" onclick="renderLoans()">Ordenar / Actualizar</button>
+                        <button class="btn btn-primary" onclick="exportarTodosCSV()">Exportar Todos CSV</button>
                     </div>
                 </div>
 
