Agregar campo de teléfono: formulario de préstamo, estructura de datos, visualización en calendario y tarjetas de préstamo

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <h3 style="margin-bottom:10px">➕ Nuevo Préstamo</h3>
             <div class="form-grid">
                 <input id="nombre" type="text" placeholder="Nombre del prestatario">
+                <input id="telefono" type="text" placeholder="Teléfono del prestatario">
                 <input id="monto" type="number" placeholder="Monto prestado (COP)">
                 <input id="tasa" type="number" step="0.01" placeholder="Tasa mensual (%)">
                 <input id="cuotas" type="number" placeholder="Número de cuotas">
