Agregar sistema de notas y comprobantes: notas por cliente, subida de imágenes de comprobantes de pago, visualización y gestión de comprobantes

--- a/index.html
+++ b/index.html
@@ -204,6 +204,19 @@
         </div>
     </div>
 
+    <!-- Receipt Viewer Modal -->
+    <div id="receiptViewerModal" class="modal" style="display:none;">
+        <div class="modal-content" style="max-width: 800px;">
+            <h3>Comprobante de Pago</h3>
+            <div style="text-align:center;margin:20px 0">
+                <img id="receiptViewerImage" src="" style="max-width:100%;max-height:60vh;border-radius:8px;box-shadow:0 4px 12px rgba(0,0,0,0.15)">
+            </div>
+            <div class="button-group">
+                <button class="btn btn-cancel" onclick="closeReceiptViewer()">Cerrar</button>
+            </div>
+        </div>
+    </div>
+
     <!-- JavaScript Modules -->
     <!-- Order matters: utils.js first (contains global variables), main.js last (initialization) -->
     <script src="js/utils.js"></script>
